# Ferro-Vps-Base

ferro-vps/: Cargo.toml  LICENSE  README.md  clippy.toml
ferro-vps/crates/ferro-asm/: Cargo.toml
ferro-vps/crates/ferro-asm/src/: lib.rs
ferro-vps/crates/ferro-audio/: Cargo.toml
ferro-vps/crates/ferro-audio/src/: lib.rs
ferro-vps/crates/ferro-bus/: Cargo.toml
ferro-vps/crates/ferro-bus/src/: lib.rs
ferro-vps/crates/ferro-cli/: Cargo.toml
ferro-vps/crates/ferro-cli/src/: main.rs
ferro-vps/crates/ferro-common/: Cargo.toml
ferro-vps/crates/ferro-common/src/: config.rs  error.rs  lib.rs  log.rs  macros.rs
ferro-vps/crates/ferro-common/src/config/: parser.rs  sections.rs  units.rs
ferro-vps/crates/ferro-common/src/error/: config.rs  domains.rs  guest.rs  internal.rs  io.rs  report.rs
ferro-vps/crates/ferro-common/src/log/: config.rs  filter.rs  format.rs  level.rs  logger.rs  record.rs  sink.rs  target.rs  time.rs
ferro-vps/crates/ferro-cpu/: Cargo.toml
ferro-vps/crates/ferro-cpu/src/: cpu.rs  lib.rs  outcome.rs  state.rs
ferro-vps/crates/ferro-gpu/: Cargo.toml
ferro-vps/crates/ferro-gpu/src/: lib.rs
ferro-vps/crates/ferro-host/: Cargo.toml
ferro-vps/crates/ferro-host/src/: main.rs
ferro-vps/crates/ferro-isa/: Cargo.toml
ferro-vps/crates/ferro-isa/src/: error.rs  flags.rs  format.rs  instruction.rs  lib.rs  memory_map.rs  opcode.rs  register.rs  word.rs
ferro-vps/crates/ferro-kernel/: Cargo.toml
ferro-vps/crates/ferro-kernel/src/: lib.rs
ferro-vps/crates/ferro-mem/: Cargo.toml
ferro-vps/crates/ferro-mem/src/: addr.rs  bus.rs  lib.rs  physmem.rs  region.rs
ferro-vps/crates/ferro-net/: Cargo.toml
ferro-vps/crates/ferro-net/src/: lib.rs
ferro-vps/crates/ferro-sdk/: Cargo.toml
ferro-vps/crates/ferro-sdk/src/: lib.rs
ferro-vps/crates/ferro-storage/: Cargo.toml
ferro-vps/crates/ferro-storage/src/: lib.rs
ferro-vps/crates/ferro-vm/: Cargo.toml
ferro-vps/crates/ferro-vm/src/: lib.rs
ferro-vps/crates/ferro-vm/tests/: integration.rs
ferro-vps/docs/: ARCHITECTURE.md  CONVENTIONS.md  DEPENDENCIES.md  ISA.md  ROADMAP.md
ferro-vps/tests/: README.md
ferro-vps/xtask/: Cargo.toml
ferro-vps/xtask/src/: main.rs
