[package]
name = "ferro-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Virtual audio device for Ferro-VPS."

[dependencies]
ferro-common = { workspace = true }
ferro-bus = { workspace = true }
