[package]
name = "ferro-bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Device bus and interrupt routing for Ferro-VPS."

[dependencies]
ferro-common = { workspace = true }
