[package]
name = "ferro-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command line manager for Ferro-VPS instances."

[dependencies]
ferro-common = { workspace = true }
ferro-vm = { workspace = true }
ferro-asm = { workspace = true }
