[package]
name = "ferro-isa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Instruction set definition and opcode tables for Ferro-VPS."

[dependencies]
ferro-common = { workspace = true }
