[package]
name = "ferro-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Virtual block storage and guest filesystem for Ferro-VPS."

[dependencies]
ferro-common = { workspace = true }
ferro-bus = { workspace = true }
